# wittypi4

./: .gitignore  Makefile  Readme.md  dkms.conf  powerbench.py  pyproject.toml  requirements.txt  rtc-pcf85063-wittypi4.c  schedule.yml  wittypi4-overlay.dts
docs/: API.md
etc/: generate-debug.py  schedule.py  wittypid-power.service
rtc-pcf85063-wittypi4/: Kconfig  dkms.conf  rtc-pcf85063-wittypi4.c
wittypi4/: __init__.py  __main__.py  wittypid.py
